--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+
+secret.md
+
 # Logs
 logs
 *.log
@@ -137,3 +140,9 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+*.txt
+my-passwords.txt
+drafts/*
+*.txt
+!plans.txt
+
